# Java_JavaUI

./: .gitignore  CMakeLists.txt  LICENSE.txt  build.gradle  settings.gradle
.github/workflows/: android.yml
build-native/: CMakeCache.txt  Makefile  cmake_install.cmake  libjui_engine.dylib
engine/include/: jui_engine.h
engine/platform/android/: jui_android_host.c  jui_android_host.h
engine/platform/ios/: jui_ios_host.h  jui_ios_host.mm
engine/src/: jui_engine_stub.c
engine/src/jni/: engine_jni.c
gradle/wrapper/: gradle-wrapper.properties
src/main/java/examples/hello_world/: FXApp.java  Main.java
src/main/java/io/github/_3xhaust/core/: App.java  EngineBridge.java  EngineRunner.java  IRRenderer.java  Insets.java  Launcher.java  Renderer.java  View.java
src/main/java/io/github/_3xhaust/core/demo/: EngineDemo.java  EngineSwingPreview.java
src/main/java/io/github/_3xhaust/core/ir/: IR.java
src/main/java/io/github/_3xhaust/core/tools/: IRExport.java
src/main/java/io/github/_3xhaust/dsl/: Layouts.java  Mod.java  Style.java  Widgets.java
src/main/java/io/github/_3xhaust/dsl/enums/: CrossAxisAlignment.java  MainAxisAlignment.java  MainAxisSize.java
src/main/java/io/github/_3xhaust/dsl/styles/: BorderStyle.java  ButtonStyle.java  TextStyle.java
src/main/java/io/github/_3xhaust/platform/android/: AndroidRenderer.java
src/main/java/io/github/_3xhaust/platform/ios/: IOSRenderer.java
src/main/java/io/github/_3xhaust/state/: State.java
src/main/java/io/github/_3xhaust/theme/: Colors.java
(+6 files in other folders)
